# reloco

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: relocoConfig.cmake.in
docs/: fallible_singleton.md
include/reloco/: allocator.hpp  allocator_helper.hpp  array.hpp  assert.hpp  collection_concepts.hpp  collection_view.hpp  concepts.hpp  construction_helpers.hpp  core.hpp  expected.hpp  fallible_constructed.hpp  fallible_singleton.hpp  flat_set.hpp  function.hpp  intrusive_ptr.hpp  map.hpp  mutex.hpp  ownership_policy.hpp  posix_allocator.hpp  rvalue_safety.hpp  shared_ptr.hpp  span.hpp  stack_allocator.hpp  stl_bridge_allocator.hpp  string.hpp  string_view.hpp  unique_ptr.hpp  vector.hpp  win_allocator.hpp
tests/: test_allocator_helpers.cpp  test_array.cpp  test_collection_view.cpp  test_construction_helpers.cpp  test_fallible_constructed.cpp  test_fallible_singleton.cpp  test_flat_set.cpp  test_function.cpp  test_intrusive_ptr.cpp  test_make_unique.cpp  test_map.cpp  test_mutex.cpp  test_posix_allocator.cpp  test_shared_ptr.cpp  test_span.cpp  test_stack_allocator.cpp  test_stl_bridge_allocator.cpp  test_string.cpp  test_string_view.cpp  test_vector.cpp
